Fix contacts page link

--- a/home/templates/home/home.html
+++ b/home/templates/home/home.html
@@ -16,6 +16,7 @@
     <div class="nav-links">
       <a href="{% url 'home' %}">Home</a>
       <a href="{% url 'about' %}">About Us</a>
+      <a href="{% url 'contact' %}">Contact us</a>
       {# Removed contact and services links #}
     </div>
   </nav>
@@ -55,6 +56,7 @@
     <h2>Quick Links</h2>
     <div class="quick-links-container">
       <a href="{% url 'about' %}" class="quick-link-card">About Us</a>
+      <a href="{% url 'departments' %}" class="quick-link-card">DEPARTMENTS</a>
       {# All other links removed to prevent errors #}
     </div>
   </section>
